content/versions/3.20/guides/_attributes.adoc
// Common attributes.
// --> No blank lines (it ends the document header)
:project-name: Quarkus
:quarkus-version: 3.20.6.2
:quarkus-platform-groupid: io.quarkus.platform
// .
:maven-version: 3.9.9
:graalvm-version: for JDK 21
:graalvm-docs-version: jdk21
:graalvm-flavor: jdk-21
:mandrel-flavor: jdk-21
:surefire-version: 3.5.2
:gradle-version: 8.13
:elasticsearch-version: 8.15.0
:elasticsearch-image: docker.io/elastic/elasticsearch:8.15.0
:opensearch-image: docker.io/opensearchproject/opensearch:2.16.0
:infinispan-version: ${infinispan.version}
:infinispan-protostream-version: ${infinispan.protostream.version}
:logstash-image: docker.io/elastic/logstash:8.15.0
:kibana-image: docker.io/elastic/kibana:8.15.0
:keycloak-docker-image: quay.io/keycloak/keycloak:26.1.3
:jandex-version: 3.3.0
:jandex-gradle-plugin-version: 1.0.0
:kotlin-version: 2.0.21
:grpc-version: 1.69.1
:protoc-version: 3.25.5
:gcf-invoker-version: 1.3.0
// Cannot simply use the name 'hibernate-*-version' here as it somehow gets
// overridden to the full version, at least when building locally.
:hibernate-orm-version-major-minor: 6.6
:hibernate-search-version-major-minor: 7.2
// .
:quarkus-home-url: https://quarkus.io
:quarkus-org-url: https://github.com/quarkusio
:quarkus-site-getting-started: /get-started
:quarkus-writing-extensions-guide: /guides/writing-extensions
:quarkus-site-publications: /publications
:quarkus-base-url: https://github.com/quarkusio/quarkus
:quarkus-clone-url: https://github.com/quarkusio/quarkus.git
:quarkus-archive-url: https://github.com/quarkusio/quarkus/archive/main.zip
:quarkus-blob-url: https://github.com/quarkusio/quarkus/blob/main
:quarkus-tree-url: https://github.com/quarkusio/quarkus/tree/main
:quarkus-issues-url: https://github.com/quarkusio/quarkus/issues
:quarkus-images-url: https://github.com/quarkusio/quarkus-images
:quarkus-chat-url: https://quarkusio.zulipchat.com
:quarkus-mailing-list-subscription-email: quarkus-dev+subscribe@googlegroups.com
:quarkus-mailing-list-index: https://groups.google.com/d/forum/quarkus-dev
:quickstarts-base-url: https://github.com/quarkusio/quarkus-quickstarts
:quickstarts-clone-url: https://github.com/quarkusio/quarkus-quickstarts.git
:quickstarts-archive-url: https://github.com/quarkusio/quarkus-quickstarts/archive/main.zip
:quickstarts-blob-url: https://github.com/quarkusio/quarkus-quickstarts/blob/main
:quickstarts-tree-url: https://github.com/quarkusio/quarkus-quickstarts/tree/main
// .
:hibernate-orm-docs-url: https://docs.jboss.org/hibernate/orm/{hibernate-orm-version-major-minor}/userguide/html_single/Hibernate_User_Guide.html
:hibernate-orm-dialect-docs-url: https://docs.jboss.org/hibernate/orm/{hibernate-orm-version-major-minor}/dialect/dialect.html
:hibernate-search-docs-url: https://docs.jboss.org/hibernate/search/{hibernate-search-version-major-minor}/reference/en-US/html_single/
// .
:amazon-services-guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/index.html
:config-consul-guide: https://docs.quarkiverse.io/quarkus-config-extensions/dev/consul.html
:hibernate-search-orm-elasticsearch-aws-guide: https://docs.quarkiverse.io/quarkus-hibernate-search-extras/dev/index.html
:neo4j-guide: https://docs.quarkiverse.io/quarkus-neo4j/dev/index.html
:vault-guide: https://docs.quarkiverse.io/quarkus-vault/dev/index.html
:vault-datasource-guide: https://docs.quarkiverse.io/quarkus-vault/dev/vault-datasource.html
:micrometer-registry-guide: https://docs.quarkiverse.io/quarkus-micrometer-registry/dev/index.html
:quarkus-migration-guide: https://github.com/quarkusio/quarkus/wiki/Migration-Guides[Migration Guides]
:quarkus-tls-registry-reference-guide: TLS registry reference
// .
:create-app-group-id: org.acme
:create-cli-group-id: {create-app-group-id}
// Attributes required for single-sourcing to downstream.
:jdk-version-other: 17
:jdk-version-latest: 21
:jdk-version-all: 17 or 21
:openshift-long: OpenShift
:openshift: OpenShift
:name-image-ubi9-open-jdk-17: registry.access.redhat.com/ubi9/openjdk-17
:name-image-ubi9-open-jdk-17-short: ubi9/openjdk-17
:name-image-ubi9-open-jdk-21: registry.access.redhat.com/ubi9/openjdk-21
:name-image-ubi9-open-jdk-21-short: ubi9/openjdk-21
// .
include::_attributes-local.adoc[]
